--- a/src/gnuwin32/fixed/html/rwin.html
+++ b/src/gnuwin32/fixed/html/rwin.html
@@ -74,7 +74,7 @@
 <h2>Material specific to the Windows port</h2>
 <table cols="2" width="100%">
 <tr>
-<td align="center" width="50%"><a href="../CHANGES">CHANGES</a></td>
+<td align="center" width="50%"><a href="CHANGES.html">CHANGES</a></td>
 <td align="center" width="50%"> <a href="rw-FAQ.html">Windows FAQ</a> </td>
 <td></td>
 </tr>
